--- a/debate/templates/debate/layout.html
+++ b/debate/templates/debate/layout.html
@@ -65,7 +65,7 @@
           </nav>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row row-cols-1">
 
 
                 <nav class="col-2 d-none d-md-block bg-light sidebar">
@@ -74,24 +74,21 @@
                             <input class="form-control mx-2" type="search" placeholder="Search" aria-label="Search">
                         </form>
                         <ul class="nav flex-column">
-                            <li class="nav-item">
-                            <a class="nav-link active" href="#">
-                                <span data-feather="home"></span>
-                                Dashboard <span class="sr-only">(current)</span>
-                            </a>
+                            <li class="nav-item  links">
+                                <span class="nav-link">
+                                    Dashboard
+                                </span>
                             </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="file"></span>
-                                Orders
-                            </a>
+                            <li class="nav-item links">
+                                <span class="nav-link">
+                                    Products
+                                </span>
                             </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="shopping-cart"></span>
-                                Products
-                            </a>
-                            </li>
+                            <li class="nav-item links">
+                                <span class="nav-link">
+                                    Home
+                                </span>
+                             </li>
                         </ul>    
                     </div>
                 </nav>
