--- a/debate/static/debate/sidebar.css
+++ b/debate/static/debate/sidebar.css
@@ -17,13 +17,14 @@
   z-index: 100; /* Behind the navbar */
   padding: 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  transition: 0.5s;
 }
 
 .sidebar-sticky {
   position: -webkit-sticky;
   position: sticky;
-  top: 60px; /* Height of navbar */
-  height: calc(100vh - 60px);
+  top: 90px; /* Height of navbar */
+  height: calc(100vh - 90px);
   padding-top: .5rem;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
@@ -60,7 +61,7 @@
 .navbar-brand-top {
   padding-top: .75rem;
   padding-bottom: .75rem;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
