--- a/debate/templates/debate/index.html
+++ b/debate/templates/debate/index.html
@@ -4,34 +4,47 @@
 
 {% block body %}
 <div id="home">
+    {% if user.is_authenticated %}
+    <h2>Welcome {{ request.user.first_name }} {{ request.user.last_name }} </h2>
+    
     <div>
-        <h4>Discussions followed by you:</h4>
+        <h4 class="mt-5">Discussions followed by you:</h4>
         <div id="D-following">
-
+                <h6 id="empty-0" class="mb-4"></h6>
+    
         </div>
-        <h4 class="border-top">Discussions participated by the ones you follow:</h4>
-        <div id="User-following">
-
+        <h4 class="border-bottom mt-5">Discussions started by the ones you follow:</h4>
+        <div id="User-started">
+                <h6 id="empty-1" class="mb-4"></h6>
+    
         </div>
-        <h4 class="border-top">New Discussions:</h4>
+        <h4 class="border-bottom mt-5">Discussions participated by the ones you follow:</h4>
+        <div id="User-participated">
+                <h6 id="empty-2" class="mb-4"></h6>
+    
+        </div>
+
+        <h4 class="border-bottom mt-5">New Discussions:</h4>
         <div id="N-discussions">
-
+                <h6 id="empty-3" class="mb-4"></h6>
+    
         </div>
     </div>
+    {% else %}
+        <h2>Welcome! Login to continue</h2>
+    {% endif %}
 </div>
 
-{% if message %}
-<div>{{ message }}</div>
-{% endif %}
+<h3 id="not-found"></h3>
 
 <div id="topics">
-    <div class="heading">
+    <div class="heading border-bottom mx-2">
         <h1></h1>
     </div>
 
-    <span class=""><button id="new-discussion-button" onclick="openNew()" class="btn my-3 btn-outline-primary">Create New discussion</button></span>
+    <span class=""><button id="new-discussion-button" onclick="openNew()" class="btn m-3 btn-outline-primary">Create New discussion</button></span>
     
-    <div id="new-discussion" class="mt-3">
+    <div id="new-discussion" class="m-3">
         <form id="new-discussion-form">
             <input type="text" class="form-control" name="discussion" id="new-subtopic"  placeholder="Title">
             <p id="name-error" class="text-danger"></p>
@@ -40,7 +53,7 @@
             <input type="submit" id="submit" value="Post" class="btn btn-primary my-2"/>
         </form>
     </div>
-    <h5 id="message"></h5>
+    <h5 id="message" class="text-danger"></h5>
     <div id="sub-topics">
     </div>
 </div>
