--- a/debate/templates/debate/layout3.html
+++ b/debate/templates/debate/layout3.html
@@ -56,7 +56,7 @@
                                 </div>                        
                             </form>
                         </div>
-                        <ul class="nav flex-column">
+                            <ul class="nav flex-column">
                             {% for topic in topics %}
                             <li id="{{ topic.id }}" class="nav-item  links">
                                 <a href="/#{{topic.slug}}" class="nav-link">
@@ -69,29 +69,14 @@
                   </div>                  
                 
 
-                <main role="main" id="main" class="col-md-10 col-lg-8 col-sm-12 mx-auto pt-3 px-4">
+                <main role="main" id="main" class="col-md-9 col-lg-9 col-sm-12 ml-3 pt-3 px-4">
                         {% block body %}
                         {% endblock %}
-                </main>
-
-                <nav class="col-lg-2 d-none d-md-none d-lg-block bg-light sidebar-right">
-                    <div class="sidebar-sticky-right">
-                            <ul class="nav flex-column">
-                                <h4 class="border-bottom pb-2">Participants</h4>
-                                {% for user in participants %}
-                                <li class="nav-item">
-                                    <a href="/profile/{{ user.username }}" class="nav-link">{{ user.username }}</a>
-                                </li>
-                                {% endfor %}
-                            </ul>    
-                    </div>
-                </nav>
-
-            
+                </main>            
             </div>
         </div>
         {% block script %}{% endblock %}
-        <script src="{% static 'debate\discussion.js' %}"></script>
+        <script src="{% static 'debate\profile.js' %}"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
