--- a/debate/templates/debate/profile.html
+++ b/debate/templates/debate/profile.html
@@ -38,7 +38,7 @@
 
 {% block script %}
 
-{% if user.is_authenticated %}
+{% if request.user.is_authenticated %}
 <script type="text/javascript">
     var request_user = "{{ request.user.username }}";
     var logged_in = true;
