--- a/debate/templates/debate/layout.html
+++ b/debate/templates/debate/layout.html
@@ -20,13 +20,13 @@
                 <span class="brand-title">D E B A T E</span>
             </a>
             <ul class="nav w-auto justify-content-end">
-                {% if user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                     <li class="nav-item text-nowrap user">
                         <a class="nav-link text-white" href="{% url 'profile' request.user.username %}" id="profile"><strong>{{ request.user.username }}</strong></a>
                     </li>
                     <a href="{% url 'profile' request.user.username %}"><i aria-label="Account" class='fa my-1 mx-2 fa-user-circle'></i></a>
                 {% endif %}
-                {% if user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                     <li class="nav-item text-nowrap logout">
                         <a class="nav-link text-white" href="{% url 'logout' %}">Log Out</a>
                     </li>
@@ -45,7 +45,7 @@
 
         <div class="container-fluid">
             <div class="row row-cols-1">
-
+                {% if request.user.is_authenticated %}
                 <div id="mySidepanel" class="sidepanel bg-light col-2 p-0">
                     <div class="sidebar-sticky mt-0">
                     <div class="dropdown">
@@ -66,7 +66,7 @@
                         </ul>    
                     </div>
                   </div>                  
-                
+                {% endif %}
 
                 <main role="main" id="main" class="col-md-9 col-lg-9 col-sm-12 ml-2 pt-3 px-3">
                         {% block body %}
