--- a/debate/templates/debate/login.html
+++ b/debate/templates/debate/login.html
@@ -1,4 +1,4 @@
-{% extends "debate/loginlayout.html" %}
+{% extends "debate/layout.html" %}
 {% block title %}Login{% endblock %}
 
 {% block body %}
