--- a/debate/templates/debate/register.html
+++ b/debate/templates/debate/register.html
@@ -1,4 +1,4 @@
-{% extends "debate/loginlayout.html" %}
+{% extends "debate/layout.html" %}
 {% block title %}Register{% endblock %}
 
 {% block body %}
